[package]
name = "druid-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
log = "*"
tracing = "*"
winit = "*"
glutin = "*"
glium = "*"
fork = "*"
ipc-channel = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
